<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application strings -->
    <string name="app_name">Vkazam</string>

    <!-- Context menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Choose URL</string>

    <!-- Main pager strings -->
    <string name="tagging_page_fragment_caption">Tagging</string>
    <string name="history_page_fragment_caption">History</string>
    <string name="fingerprints_page_fragment_caption">Fingers</string>
    <string name="search_page_fragment_caption">Search</string>

    <!-- Common strings -->
    <string name="status">Status</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="search">Search</string>
    <string name="date">Date of recognition</string>
    <string name="finger_id">Finger Id</string>
    <string name="finger_date">Date of listening</string>
    <string name="miniplayer_base_line">Artist - Title</string>

    <!-- Recognize page strings -->
    <string name="recognize_button">Click on Button\nto start or stop\nrecognizing</string>
    <string name="recognize_status">Status</string>
    <string name="recognize_status_listening">Listening</string>
    <string name="recognize_status_recognizing">Recognizing</string>

    <!-- Settings strings -->
    <string name="settings_title">Settings</string>
    <string name="settings_vk_title">Vkontakte</string>
    <string name="settings_vk_summary">Sync with vkontakte</string>
    <string name="settings_vk_urls_title">Vk Urls</string>
    <string name="settings_vk_urls_summary">Prefer to choose vk urls istead of prostopleer urls
    </string>
    <string name="settings_vk_status_title">Broadcast to status</string>
    <string name="settings_vk_status_summary">Broadcast current playing song to vk.com status
    </string>
    <string name="settings_vk_lyrics_title">Lyrics</string>
    <string name="settings_vk_lyrics_summary">Prefer to choose vk lyrics instead of musixmatch
        lyrics
    </string>
    <string name="settings_wifi_title">Only Wi-Fi</string>
    <string name="settings_wifi_summary">Enable synchronization with internet only if there is wi-fi
        connection
    </string>
    <string name="settings_scrobbling_title">Scrobbling</string>
    <string name="settings_scrobbling_summary">Enable scrobbling from standart last.fm application
    </string>
    <string name="settings_auto_recognizing_title">Auto-recognizing</string>
    <string name="settings_auto_recognizing_summary">Automatic recognizing all fingerprints when
        internet is available
    </string>
    <string name="settings_timer_delay_title">Timer delay</string>
    <string name="settings_timer_delay_summary">Setting fingerprint timer delay</string>
    <string name="settings_secs">sec</string>

    <!-- Timer delay dialog strings -->
    <string name="timer_delay_dialog_title">Timer delay</string>
    <string name="timer_delay_dialog_summary">Move the slider to set custom timer delay. Then click
        accept button to save changes or push cancel button to discard them
    </string>
    <string name="accept_button">Accept</string>
    <string name="cancel_button">Cancel</string>

    <!-- Song info strings -->
    <string name="pp_player_label">Audio player for ProstoPleer urls</string>
    <string name="vk_player_label">Audio player for Vkontakte urls</string>
    <string name="get_lyrics">Get lyrics</string>
    <string name="get_youtube_video">Watch YouTube video</string>
    <string name="track_id_label">Track Id:</string>
    <string name="artist_label">Artist:</string>
    <string name="title_label">Title:</string>
    <string name="album_label">Album:</string>
    <string name="date_label">Date of recognizing:</string>
    <string name="delete">Delete</string>

    <!-- Dialogs strings -->
    <string name="awaiting_vk_lyrics_message">Please wait for answer from VK</string>
    <string name="awaiting_youtube_message">Please wait for answer from youtube app</string>
    <string name="awaiting_title">Waiting for answer</string>
    <string name="no_musixmatch_app_message">You need to install Musixmatch\'s app and launch it at
        least one time to see lyrics
    </string>
    <string name="no_musixmatch_app_title">No musiXmatch application</string>
    <string name="get_musixmatch">Get Musixmatch</string>
    <string name="no_thanks">No, thanks</string>
    <string name="no_vk_lyrics_message">Vk lyrics is not available for this song. You can choose
        another url or get lyrics from Musicxmatch
    </string>
    <string name="no_vk_lyrics_title">No lyrics for song</string>
    <string name="get_musixmatch_lyrics">Get MM lyrics</string>
    <string name="bad_lyrics_message">Don\'t like this lyrics? You can choose another url or get
        lyrics from musicXmatch
    </string>
    <string name="bad_lyrics_title">Bad lyrics</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">is saving for offline listening</string>
    <string name="deletion_title">Deletion confirmation</string>
    <string name="deletion_message">Are you sure you want to delete this song from history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Choose url pager strings -->
    <string name="more_elements">More songs</string>

    <!-- Toasts strings -->
    <string name="empty_fingerlist">List of fingers is empty</string>
    <string name="network_not_available">Network is not available at this moment</string>
    <string name="musixmatch_not_available">Can not connect to Musixmatch, try again later</string>
    <string name="video_not_found">Video is not found</string>
    <string name="ext_storage_not_available">External storage is not available</string>
    <string name="added_in_vk_music">Song was added in your VK music</string>
    <string name="download_error">Backup error:</string>
    <string name="download_cancel">Saving is cancel</string>
    <string name="download_success">File is saved for offline listening</string>
    <string name="no_more_songs">No more songs</string>
    <string name="song_not_found">Song is not found</string>
    <string name="internet_connection_not_available">Seems you haven\'t internet connection</string>
    <string name="vk_not_available">Seems you haven\'t VK connection. Use settings to log in
    </string>
    <string name="pp_not_available">Seems prostopleer was dropped. Try again later</string>

    <!-- Sharing strings -->
    <string name="share">Share</string>
    <string name="share_song">Share song</string>
    <string name="new_song_title">Vkazam - new song</string>
    <string name="new_song_lyrics_title">Vkazam - new song (lyrics)</string>
    <string name="new_song_message">I recognized a nice song on Vkazam:</string>
    <string name="new_song_lyrics_message">I just read lyrics from song</string>

    <!-- Tutorial strings -->
    <string name="tutorial_recognize_button">Push that button to start or abort recognizing</string>
    <string name="tutorial_recognize_timer">Push that button to constantly recognize from microphone
        at regular intervals
    </string>
    <string name="tutorial_recognize_wheel">Round indicator shows how many time is left before the
        next recognition will begin
    </string>
    <string name="tutorial_recognize_result">As a result of success tagging the field with song\'s
        information and date of recognition will be shown
    </string>
    <string name="tutorial_history_item">All audio that was recognized moves in history page. Click
        on song to open page with more information about it
    </string>
    <string name="tutorial_history_item_play">You can play recognized song in any time by pressing
        play button, placed on cover art of song
    </string>
    <string name="tutorial_history_miniplayer">Miniplayer shows important information (Artist and
        title) about current playing song. Also it contains navigation buttons (previous and next
        buttons)\n\nRemember, track that was found may not be equal to track that was recognized
    </string>
    <string name="tutorial_finger_recognize">Click on list item to begin recognizing of saved music
        fingerprint
    </string>
    <string name="tutorial_finger_recognize_result">As the result of recognizing the out message
        will be shown in the fingerId field, then the item will disappear
    </string>
    <string name="tutorial_finger_auto_recognize">Click on the top item and the programm will be
        automatic recognize all saved music fingerprints, when network will be available
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
