<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:vkazam="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_share"
            android:title="@string/share"
            vkazam:actionProviderClass="android.support.v7.widget.ShareActionProvider"
            vkazam:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_delete"
            android:title="@string/delete"
            vkazam:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_delete"/>

    <item
            android:id="@+id/refresh"
            android:title="@string/action_refresh"
            vkazam:showAsAction="never"/>

    <item
            android:id="@+id/settings"
            android:title="@string/action_settings"
            vkazam:showAsAction="never"/>

</menu>