<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/fingersPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/settingsAutoRecognize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:clickable="true"
                android:paddingRight="?android:attr/scrollbarSize"
                android:background="@drawable/pref_item_selector">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/settings_auto_recognizing_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@android:color/transparent"/>

            <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

        </LinearLayout>

        <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:divider="@android:color/transparent"
                style="@style/HistoryListView">
        </ListView>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/tutorialPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/black_semitransparent">

        <LinearLayout
                android:id="@+id/tutorial3AutoRecognizeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:gravity="center_vertical"
                android:clickable="true"
                android:paddingRight="?android:attr/scrollbarSize"
                android:background="@drawable/pref_item_bg_default">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/settings_auto_recognizing_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@android:color/transparent"/>

            <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

            <include layout="@layout/list_item_finger"
                     android:id="@+id/tutorial12FingerLayout"
                     android:clickable="false"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/tutorial1Link"
                    android:layout_width="64dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_tutorial_up_arrow"
                    android:clickable="false"/>

            <ImageView
                    android:id="@+id/tutorial2Link"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_tutorial_up_arrow"
                    android:clickable="false"/>

        </LinearLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tutorial1FingerRecognize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tutorial_block"
                    android:padding="5dp"
                    android:text="@string/tutorial_finger_recognize"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:clickable="false"/>

            <TextView
                    android:id="@+id/tutorial2FingerRecognizeResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/tutorial_block"
                    android:padding="5dp"
                    android:text="@string/tutorial_finger_recognize_result"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:clickable="false"/>

        </RelativeLayout>

        <ImageView
                android:id="@+id/tutorial3Link"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_tutorial_up_arrow"
                android:clickable="false"/>

        <TextView
                android:id="@+id/tutorial3FingerAutoRecognize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:background="@drawable/tutorial_block"
                android:padding="5dp"
                android:text="@string/tutorial_finger_auto_recognize"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:clickable="false"/>

    </LinearLayout>

</RelativeLayout>
